--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>IDEA DATE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="keywords" content="" />
@@ -9,11 +9,73 @@
 	<meta name="author" content="hicham Tahli">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/style.css" />
-
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 </head>
+<body>	
+	<div class="container container-fluid">
+        <div class="row">
+        	<!-- HEADER -->
+			<header>
+				<div class="col-md-6 logo_container">
+					<a href="" class="logo"><img src="images/logo.png" alt="" /></a>
+					<a href="" class="nav_link arrow1 white">Browse</a>
+				</div>
 
-<body>
+				<div class="col-md-6">
+					<div class="menu_top tar">
+						<a href=""><img src="images/ico_cloche.png" alt="" /></a>
+						<a href=""><img src="images/ico_heart1.png" alt="" /></a>
+						<a href="" class="person arrow1"><img src="images/user1.jpg" alt="" /></a>
+					</div>	
+				</div>
+				<div class="clearfix"></div>
+				<!-- SLIDES -->
+				<div class="one_slide">
+					<img src="images/couple.jpg" alt="" />
+					<div class="slide_text">
+						<h1>Date night restaurants</h1>
+						<h4>Best places for a date night in New York City</h4>
+						<span>6 m followers</span>
+					</div>
+					<div class="slide_links tar">
+						<a href="" class="button_red">Follow</a>
+						<a href="" class="ico_setting"></a>
+					</div>
+				</div>				
+				<!-- END SLIDES -->
+				<!-- NAVIGATION -->
+				<nav>
+					<ul>
+						<li class="popular">
+							<a href="#" class="arrow1">Popular</a>	
+							<ul class="nav1">
+								<li><a href="">New</a></li>
+								<li><a href="">Editors choice</a></li>
+							</ul>
+						</li>
+						<li class="active"><a href="">Affordable</a></li>
+						<li class=""><a href="">Fancy</a></li>
+						<li class=""><a href="">Tips</a></li>
+						<li class=""><a href="">Community</a></li>
+					</ul>
+
+				</nav>				
+				<!-- END NAVIGATION -->
+			</header>			
+        	<!-- END HEADER -->        	
+
+        	<!-- PAGE CONTENT -->
+			<div id="content">
+				
+			</div>
+        	<!-- END PAGE CONTENT -->
+
+			<!-- FOOTER -->
+			<footer></footer>
+			<!-- END FOOTER -->
+		</div>
+	</div>
+
     <script type="text/javascript" src="js/bootstrap.min.js"></script> 
     <script type="text/javascript" src="js/custom.js"></script>
 </body>
