--- a/index.html
+++ b/index.html
@@ -66,12 +66,98 @@
 
         	<!-- PAGE CONTENT -->
 			<div id="content">
-				
+				<div class="col-md-7 galerie">
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>Asiate <img src="images/ico_star.png" alt="" /><span>4.5</span></h2>
+								<p>400K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>Blue Hill <img src="images/ico_star.png" alt="" /><span>5.5</span></h2>
+								<p>900K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>Jean-George <img src="images/ico_star.png" alt="" /><span>5.5</span></h2>
+								<p>900K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>Petrossian <img src="images/ico_star.png" alt="" /><span>4.4</span></h2>
+								<p>670K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>ABC Kitchen <img src="images/ico_star.png" alt="" /><span>3.5</span></h2>
+								<p>100K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="one_galerie">
+							<div class="galerie_nav">
+								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
+								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
+							</div>
+							<img class="galerie_img" src="images/pancake.jpg" alt="" />
+							<div class="galerie_text">
+								<h2>OC <img src="images/ico_star.png" alt="" /><span>4.5</span></h2>
+								<p>300K likes</p>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="col-md-5">
+
+				</div>
+				<div class="clearfix"></div>
 			</div>
         	<!-- END PAGE CONTENT -->
 
 			<!-- FOOTER -->
-			<footer></footer>
+			<footer>
+				<a href="" class="logo"><img src="images/logo.png" alt="" /></a>
+			</footer>
 			<!-- END FOOTER -->
 		</div>
 	</div>
