--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					<div class="clearfix"></div>
 				</div>
 				<div class="col-md-5">
-
+					<div id="map"></div>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -163,7 +163,9 @@
 	</div>
 
     <script type="text/javascript" src="js/bootstrap.min.js"></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIaZYl0wR5YrpxgWLID7TRh-Ka15L4LLo"></script>
     <script type="text/javascript" src="js/custom.js"></script>
+
 </body>
 
 </html> 
