--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div class="row">
         	<!-- HEADER -->
 			<header>
-				<div class="col-md-6 logo_container">
-					<a href="" class="logo"><img src="images/logo.png" alt="" /></a>
-					<a href="" class="nav_link arrow1 white">Browse</a>
-				</div>
+				<div class="col-md-6 col-sm-12 logo_container">
+					<img src="images/nav_tab.png" alt="" class="nav_open" />
+					<img src="images/nav_close.png" alt="" class="nav_close" />
 
-				<div class="col-md-6">
+					<a href="" class="logo"><img src="images/logo.png" alt="" /></a>
+					<a href="" class="nav_link arrow1 white hidden-sm hidden-xs">Browse</a>
+				</div>
+				<div class="col-md-6 hidden-sm  hidden-xs">
 					<div class="menu_top tar">
 						<a href=""><img src="images/ico_cloche.png" alt="" /></a>
 						<a href=""><img src="images/ico_heart1.png" alt="" /></a>
@@ -57,6 +59,11 @@
 						<li class=""><a href="">Fancy</a></li>
 						<li class=""><a href="">Tips</a></li>
 						<li class=""><a href="">Community</a></li>
+						<li class="last hidden-lg hidden-md">
+							<a href=""><img src="images/ico_cloche.png" alt="" /></a>
+							<a href=""><img src="images/ico_heart1.png" alt="" /></a>
+							<a href="" class="person arrow1"><img src="images/user1.jpg" alt="" /></a>							
+						</li>
 					</ul>
 
 				</nav>				
@@ -67,7 +74,7 @@
         	<!-- PAGE CONTENT -->
 			<div id="content">
 				<div class="col-md-7 galerie">
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
@@ -80,7 +87,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
@@ -93,7 +100,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
@@ -106,7 +113,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
@@ -119,7 +126,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
@@ -132,7 +139,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
