--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="one_galerie">
+							<img src="images/ico_heart2.png" class="heart_ico" alt="" />
 							<div class="galerie_nav">
 								<a href=""><img src="images/ico_arrow2.png" alt="" /></a>
 								<a href=""><img src="images/ico_arrow3.png" alt="" /></a>
